--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: pdfTemplate
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Template for PDFs with margins and Tidyverse
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: MaryClare Colombo
+Maintainer: The package maintainer <maryclarecc@gmail.com>
+Description: Creates a template for a PDF RMarkdown
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
