--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Template for PDFs with margins and Tidyverse
 Version: 0.1.0
 Author: MaryClare Colombo
 Maintainer: The package maintainer <maryclarecc@gmail.com>
-Description: Creates a template for a PDF RMarkdown
-License: What license is it under?
+Description: Creates a template for a PDF RMarkdown.
+License: CC BY
 Encoding: UTF-8
 LazyData: true
