--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,6 @@ Version: 0.1.0
 Author: MaryClare Colombo
 Maintainer: The package maintainer <maryclarecc@gmail.com>
 Description: Creates a template for a PDF RMarkdown.
-License: Creative Commons Zero v1.0 Universal
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
